--- a/src/main/resources/templates/editproduct.html
+++ b/src/main/resources/templates/editproduct.html
@@ -27,7 +27,7 @@ td{
 			<a href="/addcategory">เพิ่ม </a>
 		</td>
 	</tr>
-	<tr>
+	<tr th:if="${cat != null}">
 		<td>สินค้าที่มีตอนนี้ </td>
 		<td>
 			<div class="center">
@@ -57,7 +57,7 @@ td{
 			</div>
 		</td>
 	</tr>
-	<tr>
+	<tr th:if="${cat != null}">
 		<td>แก้ไขรายละเอียดเพิ่มเติม </td>
 		<td>
 			<form action="#" th:action="@{/updatecat}" th:object="${cat}" method="post" enctype="multipart/form-data">
