--- a/src/main/resources/templates/adddeliveryprice.html
+++ b/src/main/resources/templates/adddeliveryprice.html
@@ -17,7 +17,7 @@
 		}
 		else{
 			check.innerHTML = '<select><option>xxx</option></select>';
-			adddeliverybtn = "เพิ่มชื่อบริการขนส่ง";
+			adddeliverybtn = "เพิ่มชื่อบริการขนส่ง" ;;
 		}
 	}
 </script>
