--- a/src/main/resources/templates/adddeliveryprice.html
+++ b/src/main/resources/templates/adddeliveryprice.html
@@ -58,6 +58,12 @@
 				<td></td>
 				<td><input style="float: right;" type="submit" value="ยืนยัน "></td>
 			</tr>
+			<tr>
+				<td><p>บริการขนส่ง </p></td>
+				<td><p>น้ำหนักสูงสุด </p></td>
+				<td><p>ราคาขนส่ง </p></td>
+				<td><a href="#">ลบ </a></td>
+			</tr>
 		</table>
 	</form>
 </body>
