--- a/src/main/resources/templates/adddeliveryprice.html
+++ b/src/main/resources/templates/adddeliveryprice.html
@@ -14,11 +14,21 @@
 		if(document.getElementById("choosedelivery1").style.visibility == "hidden"){
 			document.getElementById("choosedelivery1").style.visibility = "visible";
 			document.getElementById("choosedelivery2").style.visibility = "hidden";
+			var h = document.createElement("INPUT");
+			h.type = "hidden";
+			h.name="hidetext";
+			h.value="text";
+			document.getElementById("choosedelivery1").appendChild(h);
 			adddeliverybtn = "เลือกบริการขนส่ง";
 		}
 		else{
 			document.getElementById("choosedelivery1").style.visibility = "hidden";
 			document.getElementById("choosedelivery2").style.visibility = "visible";
+			var h = document.createElement("INPUT");
+			h.type = "hidden";
+			h.name="hidetext";
+			h.value="select";
+			document.getElementById("choosedelivery2").appendChild(h);
 			adddeliverybtn = "เพิ่มชื่อบริการขนส่ง";
 		}
 		console.log(document.getElementById("choosedelivery1").stlye.visibility)
@@ -35,13 +45,11 @@
 				<td>
 				<div id="choosedelivery1" style="visibility: hidden;">
 					<input type="text" name="textname">
-					<input type="hidden" name="hidden" value="text">
 				</div>
 				<div id="choosedelivery2" style="visibility: visible;">
 					<select name="selectname">
-						<option th:each="delivery: ${deliveryList}" th:value="${delivery.getNameDelivery()}"><p th:text="${delivery.getNameDelivery()}"></p></option>
+						<option th:each="deli: ${deliveryList}" th:value="${deli.getNameDelivery()}"><p th:text="${deli.getNameDelivery()}"></p></option>
 					</select>
-					<input type="hidden" name="hidden" value="select">
 				</div>
 				</td>
 				<td><input id="adddeliver" type="button" onclick="adddelivery()" value="เพิ่มชื่อบริการขนส่ง "></td>
