color add category

--- a/src/main/resources/templates/editproduct.html
+++ b/src/main/resources/templates/editproduct.html
@@ -56,7 +56,7 @@ a.catheader{
 	line-height: 40pt;
 }
 a.cataddheader{
-	color: var(--brown);
+	color: white;
 	text-decoration: none;
 	vertical-align: middle;
 	font-size: 30pt;
