--- a/src/main/resources/templates/transfercheck.html
+++ b/src/main/resources/templates/transfercheck.html
@@ -215,11 +215,11 @@ function off() {
 				</tr>
 				<tr>
 					<th>วันเวลาที่โอน</th>
-					<td th:text="${userorder.getCratedOrder}"></td>
+					<td th:text="${userorder.getCratedOrder()}"></td>
 				</tr>
 				<tr>
 					<th>บัญชี 4 ตัวท้าย</th>
-					<td th:text="${userorder.getLastNum}"></td>
+					<td th:text="${userorder.getLastNum()}"></td>
 				</tr>
 			</table>
 			<div class="img"></div>
