--- a/src/main/resources/templates/transfercheck.html
+++ b/src/main/resources/templates/transfercheck.html
@@ -172,7 +172,27 @@ summary{
 </style>
 <script>
 function on() {
-  document.getElementById("overlay").style.visibility = "visible";
+	var valueTD1 = document.getElementById( "valueTD1" ).innerText;
+	var valueTD2 = document.getElementById("valueTD2").value;
+	var valueTD3 = document.getElementById( "valueTD3" ).innerText;
+	var valueTD4 = document.getElementById( "valueTD4" ).innerText;
+	var valueTD5 = document.getElementById("valueTD5").value;
+	var valueTD6 = document.getElementById( "valueTD6" ).innerText;
+	var valueTD7 = document.getElementById( "valueTD7" ).innerText;
+	var valueTD8 = document.getElementById("valueTD8").value;
+	var valueIMG = document.getElementById("valueIMG").value; 
+	var valueLink = document.getElementById("valueLink").value;
+  	document.getElementById("overlay").style.visibility = "visible";
+  	document.getElementById("overlaytableTD1").innerHTML = valueTD1;
+  	document.getElementById("overlaytableTD2").innerHTML = valueTD2;
+  	document.getElementById("overlaytableTD3").innerHTML = valueTD3;
+  	document.getElementById("overlaytableTD4").innerHTML = valueTD4;
+  	document.getElementById("overlaytableTD5").innerHTML = valueTD5;
+  	document.getElementById("overlaytableTD6").innerHTML = valueTD6;
+  	document.getElementById("overlaytableTD7").innerHTML = valueTD7;
+  	document.getElementById("overlaytableTD8").innerHTML = valueTD8;
+  	document.getElementById("overlayIMG").innerHTML = "<img width='200' alt='can't download' src='data:image/jpeg;base64,"+ valueIMG +"'>";
+  	document.getElementById("overlayconfirm").href="/trantopacking/"+valueLink;
 }
 
 function off() {
@@ -190,40 +210,40 @@ function off() {
 			<div class="overlayheader center">ตรวจสอบ </div>
 	<table class="overlaytable">
 				<tr>
-					<th>รหัสสั่งซื้อ</th>
-					<td><td>
-				</tr>
-				<tr>
-					<th>ชื่อ-สกุล</th>
-					<td></td>
-				</tr>
-				<tr>
-					<th>ยอดรวมที่ต้องโอน</th>
-					<td></td>
-				</tr>
-				<tr>
-					<th>จำนวนเงินที่โอนมา</th>
-					<td></td>
-				</tr>
-				<tr>
-					<th>จากธนาคาร</th>
-					<td></td>
-				</tr>
-				<tr>
-					<th>เข้าธนาคาร</th>
-					<td></td>
-				</tr>
-				<tr>
-					<th>วันเวลาที่โอน</th>
-					<td></td>
-				</tr>
-				<tr>
-					<th>บัญชี 4 ตัวท้าย</th>
-					<td></td>
-				</tr>
+						<th>รหัสสั่งซื้อ</th>
+						<td id="overlaytableTD1"></td>
+					</tr>
+					<tr>
+						<th>ชื่อ-สกุล</th>
+						<td id="overlaytableTD2"></td>
+					</tr>
+					<tr>
+						<th>จำนวนเงินที่ต้องโอน</th>
+						<td id="overlaytableTD3"></td>
+					</tr>
+					<tr>
+						<th>จำนวนเงินที่โอนมา</th>
+						<td id="overlaytableTD4"></td>
+					</tr>
+					<tr>
+						<th>จากธนาคาร</th>
+						<td id="overlaytableTD5"></td>
+					</tr>
+					<tr>
+						<th>เข้าธนาคาร</th>
+						<td id="overlaytableTD6"></td>
+					</tr>
+					<tr>
+						<th>วันเวลาที่โอน</th>
+						<td id="overlaytableTD7"></td>
+					</tr>
+					<tr>
+						<th>บัญชี 4 ตัวท้าย</th>
+						<td id="overlaytableTD8"></td>
+					</tr>
 			</table>
-			<div class="img"></div>
-		<button class="overlayconfirm">ยืนยัน </button>
+			<div class="img" id="overlayIMG"></div>
+		<a href="" class="overlayconfirm" id="overlayconfirm">ยืนยัน </a>
 			</div>
 		</div>
 	</div>
@@ -240,7 +260,7 @@ function off() {
 				<th style="height:30pt; width: 10%">ตรวจสอบ </th>
 			</tr>
 			<tr th:each="userorder: ${userorders}">
-				<td th:text="${'#'+ userorder.getIdOrder()}"></td>
+				<td th:text="${'#'+ userorder.getIdOrder()}" id="valueTD1"></td>
 				<td style="position: relative;" >
 					<ul>
 						<li th:each="orderlist: ${orderlists}" th:if="${orderlist.getIdOrder()==userorder.getIdOrder()}"> 
@@ -249,13 +269,18 @@ function off() {
 			  			</li>
 					</ul>
 				</td>
-				<td th:text="${userorder.getSellerBank()}"></td>
-				<td th:text="${userorder.getPayTime()}"></td>
-				<td th:text="${userorder.getTotalOrder()}"></td>
-				<td th:text="${userorder.getPayTotal()}"></td>
+				<td th:text="${userorder.getSellerBank()}" id="valueTD6"></td>
+				<td th:text="${userorder.getPayTime()}" id="valueTD7"></td>
+				<td th:text="${userorder.getTotalOrder()}" id="valueTD3"></td>
+				<td th:text="${userorder.getPayTotal()}" id="valueTD4"></td>
 				<td style="text-align: center;">
 					<button class="btncheck" onclick="on()">ตรวจสอบ </button>
 				</td>
+				<input type="hidden" th:value="${userorder.getUserprofile().getName()}" id="valueTD2">
+				<input type="hidden" th:value="${userorder.getUserBank()}" id="valueTD5">
+				<input type="hidden" th:value="${userorder.getLastNum()}" id="valueTD8">
+				<input type="hidden" th:value="${userorder.getPhotoPay()}" id="valueIMG">
+				<input type="hidden" th:value="${userorder.getIdOrder()}" id="valueLink">
 			</tr>
 		</table>
 	</details>
