all in edit list

--- a/src/main/resources/templates/ovlaytrack.html
+++ b/src/main/resources/templates/ovlaytrack.html
@@ -29,11 +29,11 @@ body{
 	justify-content: center;
 	flex-flow: column;
 }
-table{
+.tabletrack{
 	width: 100%;
 	overflow-y: scroll;
 }
-th, td{
+.tabletrack>th, .tabletrack>td{
 	text-align: left;
 	padding: 2% 0 2% 0;
 }
