--- a/src/main/resources/templates/Sfirstpage.html
+++ b/src/main/resources/templates/Sfirstpage.html
@@ -206,6 +206,7 @@ li a {
 	</ul>
 	<div class="whitebg center">
 		<a href="/checking" class="btnfirstpage center">ตรวจสอบ </a><br>
+		<a href="/packing" class="btnfirstpage center">บรรจุสินค้า </a><br>
 		<a href="/tracking" class="btnfirstpage center">ต้องจัดส่ง </a><br>
 		<a href="/complete" class="btnfirstpage center">จัดส่งแล้ว </a><br>
 	</div>
