--- a/src/main/resources/templates/transfertrack.html
+++ b/src/main/resources/templates/transfertrack.html
@@ -87,7 +87,7 @@ summary{
 	height: 100%;
 	border: none;
 }
-#overlay {
+#overlay, #overlaydetail {
   position: fixed;
   visibility: hidden;
   width: 100%;
@@ -211,11 +211,19 @@ hr {
 </style>
 <script>
 function on() {
-  document.getElementById("overlay").style.visibility = "visible";
+	  document.getElementById("overlay").style.visibility = "visible";
 }
 
 function off() {
-  document.getElementById("overlay").style.visibility = "hidden";
+	  document.getElementById("overlay").style.visibility = "hidden";
+}
+
+function ondetail() {
+	document.getElementById("overlaydetail").style.visibility = "visible";
+}
+
+function offdetail() {
+	document.getElementById("overlaydetail").style.visibility = "hidden";
 }
 </script>
 </head>
@@ -223,12 +231,18 @@ function off() {
 	<div class="sellerheader center">ต้องจัดส่ง </div>
 	<a href="/firstpage" class="back"><</a>
 	<!-- List order from database -->
+	<div class="center" id="overlaydetail" onclick="offdetail()">
+		<div class="checked center">
+			<div class="overlayheader center">รายละเอียดเพิ่มเติม </div>
+			s
+		</div>
+	</div>
 	<div class="center" id="overlay" onclick="off()">
 		<div class="checked center">
 			<div class="idproduct">#รหัสสั่งซื้อ </div>
-	<div class="overlayheader center">รายการคำสั่งซื้อ </div>
-	<div class="container">
-	 <table class="tabletrack">
+			<div class="overlayheader center">รายการคำสั่งซื้อ </div>
+			<div class="container">
+	 			<table class="tabletrack">
 				<tr>
 					<td style="width: 50px;"><img class="imgproduct" src=""> </td>
 					<td><ul>
@@ -237,15 +251,15 @@ function off() {
 					 </ul></td>
 					<td style="text-align: right;">150 </td>
 				</tr>
-			</table>
-			<hr>
-			<div class="right">
-				ยอดรวม <price>150</price>
-			</div>
-			<div class="left">
-				ที่อยู่ <address>xxx xxx xxx</address>
-			</div>
-	</div>
+				</table>
+				<hr>
+				<div class="right">
+					ยอดรวม <price>150</price>
+				</div>
+				<div class="left">
+					ที่อยู่ <address>xxx xxx xxx</address>
+				</div>
+		</div>
 		<button class="overlayconfirm">เพิ่มเลข Track </button>
 		</div>
 	</div>
@@ -268,7 +282,8 @@ function off() {
 							<span th:text="${' x'+ orderlist.getNumber()}"></span>
 			  			</li>
 					</ul>
-			</td>
+					<a onclick="ondetail()" id="detaildata">รายละเอียดเพิ่มเติม </a>
+				</td>
 			<td style="text-align: center;">
 				<input style="width: 100pt;" type="text">
 				<button class="btncheck" onclick="on()">ยืนยัน </button>
