--- a/src/main/resources/templates/packing.html
+++ b/src/main/resources/templates/packing.html
@@ -164,12 +164,14 @@ function offdetail() {
 		<table class="maintable">
 		<tr class="tableheader">
 			<th style="height:30pt; width: 10%" > รหัสสั่งซื้อ </th>
-			<th style="height:30pt; width: 70%">  รายการ </th>
+			<th style="height:30pt; width: 10%" > ชื่อผู้ซื้อ </th>
+			<th style="height:30pt; width: 60%">  รายการ </th>
 			<th style="height:30pt; width: 10%" > วัน-เวลาที่โอน </th>
 			<th style="height:30pt; width: 10%" > ตรวจสอบ </th>
 		</tr>
 		<tr th:each="userorder: ${userorders}">
 			<td th:text="${'#'+ userorder.getIdOrder()}"></td>
+			<td>ชื่อผู้ซื้อ</td>
 			<td style="position: relative;" >
 				<ul>
 					<li th:each="orderlist: ${orderlists}" th:if="${orderlist.getIdOrder()==userorder.getIdOrder()}"> 
