--- a/src/main/resources/templates/packing.html
+++ b/src/main/resources/templates/packing.html
@@ -164,14 +164,14 @@ function offdetail() {
 		<table class="maintable">
 		<tr class="tableheader">
 			<th style="height:30pt; width: 10%" > รหัสสั่งซื้อ </th>
-			<th style="height:30pt; width: 10%" > ชื่อผู้ซื้อ </th>
-			<th style="height:30pt; width: 60%">  รายการ </th>
+			<th style="height:30pt; width: 20%" > ชื่อผู้ซื้อ </th>
+			<th style="height:30pt; width: 50%">  รายการ </th>
 			<th style="height:30pt; width: 10%" > วัน-เวลาที่โอน </th>
 			<th style="height:30pt; width: 10%" > ตรวจสอบ </th>
 		</tr>
 		<tr th:each="userorder: ${userorders}">
 			<td th:text="${'#'+ userorder.getIdOrder()}"></td>
-			<td>ชื่อผู้ซื้อ</td>
+			<td th:text="${userorder.getUserprofile().getName()}"></td>
 			<td style="position: relative;" >
 				<ul>
 					<li th:each="orderlist: ${orderlists}" th:if="${orderlist.getIdOrder()==userorder.getIdOrder()}"> 
@@ -180,7 +180,7 @@ function offdetail() {
 			  		</li>
 				</ul>
 				<a onclick="ondetail()" id="detaildata">รายละเอียดเพิ่มเติม </a>
-			<td> </td>
+			<td th:text="${userorder.getPayTime()}" id="valueTD7"></td>
 			<td style="flex-flow: column;" class="center">
 				<input type="checkbox">
 			</td>
