--- a/src/main/resources/templates/transfercheck.html
+++ b/src/main/resources/templates/transfercheck.html
@@ -268,7 +268,7 @@ function offdetail() {
 				<th style="height:30pt; width: 10%" > รหัสสั่งซื้อ </th>
 				<th style="height:30pt; width: 40%">  รายการ </th>
 				<th style="height:30pt; width: 10%">ธนาคารผู้ขาย </th>
-				<th style="height:30pt; width: 10%">วันเวลาที่โอน </th>
+				<th style="height:30pt; width: 10%">วันเ-วลาที่โอน </th>
 				<th style="height:30pt; width: 10%">ยอดรวมที่ต้องโอน</th>
 				<th style="height:30pt; width: 10%">จำนวนเงินที่โอนมา</th>
 				<th style="height:30pt; width: 10%">ตรวจสอบ </th>
